Encriptar contraseña en login

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -8,6 +8,9 @@
 	<body>
 		<div>
 			<center>
+				<p>
+					Introduzca un usuario valido
+				</p>
 				<form method="POST" action="Check.php">
 					<input type="text" name="user" placeholder="User"/>
 					<br />
