--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -18,6 +18,12 @@
 					<br />
 					<button type="submit">Login</button>
 				<form>
+				<p>
+					Crear usuario
+				</p>
+				<form method="POST" action="Check.php">
+					<button type="Iniciar registro">Login</button>
+				<form>
 			</center>
 		</div>
 	</body>
