Creación de usuario en Login.html

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -22,7 +22,7 @@
 					Crear usuario
 				</p>
 				<form method="POST" action="Check.php">
-					<button type="Iniciar registro">Login</button>
+					<button type="submit">Iniciar registro</button>
 				<form>
 			</center>
 		</div>
