--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -14,15 +14,15 @@
 					<input type="password" name="passwd" placeholder="Password"/>
 					<br />
 					<button type="submit">Login</button>
-				<form>
+				</form>
 					<br />
 					<br />
 				<p>
 					Crear usuario
 				</p>
-				<form method="POST" action="Check.php">
-					<button type="submit">Iniciar registro</button>
-				<form>
+            <form method = "POST" action = "crear_usuario.php">
+                <input type ="submit" value="Iniciar registro"><br>
+            </form>
 			</center>
 		</div>
 	</body>
