--- a/Encuesta/Login2.html
+++ b/Encuesta/Login2.html
@@ -17,13 +17,13 @@
 					<input type="password" name="passwd" placeholder="Password"/>
 					<br />
 					<button type="submit">Login</button>
-				<form>
+				</form>
 				<p>
 					Crear usuario
 				</p>
-				<form method="POST" action="Check.php">
-					<button type="submit">Iniciar registro</button>
-				<form>
+				<form method = "POST" action = "crear_usuario.php">
+					<input type ="submit" value="Iniciar registro"><br>
+				</form>
 			</center>
 		</div>
 	</body>
