--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -8,19 +8,19 @@
 	<body>
 		<div>
 			<center>
-				<form method="POST" action="Check.php">
+				<form method="POST" action="check_usuario.php">
 					<input type="text" name="user" placeholder="User"/>
 					<br />
 					<input type="password" name="passwd" placeholder="Password"/>
 					<br />
 					<button type="submit">Login</button>
-				<form>
+				</form>
 					<br />
 					<br />
 				<p>
 					Crear usuario
 				</p>
-				<form method="POST" action="Check.php">
+				<form method="POST" action="check_usuario.php">
 					<button type="submit">Iniciar registro</button>
 				<form>
 			</center>
