Changed form action

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -20,7 +20,7 @@
 				<p>
 					Crear usuario
 				</p>
-				<form method="POST" action="check_usuario.php">
+				<form method="POST" action="crear_usuario.php">
 					<button type="submit">Iniciar registro</button>
 				<form>
 			</center>
