Changed error message

--- a/Encuesta/Login2.html
+++ b/Encuesta/Login2.html
@@ -9,7 +9,7 @@
 		<div>
 			<center>
 				<p>
-					empty($usuario) && empty($pswd)
+					Ambos campos son obligatorios
 				</p>
 				<form method="POST" action="check_usuario.php">
 					<input type="text" name="user" placeholder="User"/>
