Added a web phrase

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -8,6 +8,9 @@
 	<body>
 		<div>
 			<center>
+				<p>
+					Introduzca su usuario y contraseña, por favor
+				</p>
 				<form method="POST" action="check_usuario.php">
 					<input type="text" name="user" placeholder="User"/>
 					<br />
