Added UTF-8 encoding

--- a/Encuesta/Login2.html
+++ b/Encuesta/Login2.html
@@ -4,6 +4,7 @@
 		<title>
 			Inicio de Sesion
 		</title>
+		<meta charset="UTF-8">
 	</head>
 	<body>
 		<div>
@@ -12,16 +13,16 @@
 					Ambos campos son obligatorios
 				</p>
 				<form method="POST" action="check_usuario.php">
-					<input type="text" name="user" placeholder="User"/>
+					<input type="text" name="user" placeholder="Usuario"/>
 					<br />
-					<input type="password" name="passwd" placeholder="Password"/>
+					<input type="password" name="passwd" placeholder="Contraseña"/>
 					<br />
 					<button type="submit">Login</button>
 				</form>
 				<p>
 					Crear usuario
 				</p>
-				<form method="POST" action="Check.php">
+				<form method="POST" action="crear_usuario.php">
 					<button type="submit">Iniciar registro</button>
 				<form>
 			</center>
