Añadido encriptado de contraseña a insert_user

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -13,9 +13,9 @@
 					Introduzca su usuario y contraseña, por favor
 				</p>
 				<form method="POST" action="check_usuario.php">
-					<input type="text" name="user" placeholder="User"/>
+					<input type="text" name="user" placeholder="Usuario"/>
 					<br />
-					<input type="password" name="passwd" placeholder="Password"/>
+					<input type="password" name="passwd" placeholder="Contraseña"/>
 					<br />
 					<button type="submit">Login</button>
 				</form>
