changed some things

--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -15,7 +15,7 @@
 				<form method="POST" action="check_usuario.php">
 					<input type="text" name="user" placeholder="Usuario"/>
 					<br />
-					<input type="password" name="passwd" placeholder="Contraseña"/>
+					<input type="password" name="password" placeholder="Contraseña"/>
 					<br />
 					<button type="submit">Login</button>
 				</form>
