--- a/Encuesta/Login.html
+++ b/Encuesta/Login.html
@@ -7,10 +7,14 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<div align = "center">
+            <h3> Página de Autenticación </h3>
+			Identifiquese o será destruido
+        </div>
 		<div>
 			<center>
 				<p>
-					Introduzca su usuario y contraseña, por favor
+					<!--Introduzca su usuario y contraseña, por favor-->
 				</p>
 				<form method="POST" action="check_usuario.php">
 					<input type="text" name="user" placeholder="Usuario"/>
